# goose

./: 404.html  index.html  skills-manifest.json
assets/js/: main.bb38ee26.js
blog/: index.html
blog/README/: index.html
blog/archive/: index.html
blog/authors/: index.html
blog/authors/adewale/: index.html
blog/authors/aharvard/: index.html
blog/authors/alex/: index.html
blog/authors/alexhancock/: index.html
blog/authors/alice/: index.html
blog/authors/amanda/: index.html
blog/authors/angie/: index.html
blog/authors/clinton/: index.html
blog/authors/dalton/: index.html
blog/authors/damien/: index.html
blog/authors/dean/: index.html
blog/authors/debbie/: index.html
blog/authors/ebony/: index.html
blog/authors/glenn/: index.html
blog/authors/harrison/: index.html
blog/authors/ian/: index.html
blog/authors/jeuston/: index.html
blog/authors/matt/: index.html
blog/authors/mic/: index.html
blog/authors/rarora/: index.html
blog/authors/rizel/: index.html
blog/authors/tania/: index.html
blog/authors/tomasz/: index.html
blog/authors/tyler/: index.html
blog/page/10/: index.html
blog/page/2/: index.html
blog/page/3/: index.html
blog/page/4/: index.html
blog/page/5/: index.html
blog/page/6/: index.html
blog/page/7/: index.html
blog/page/8/: index.html
blog/page/9/: index.html
community/: index.html
community/data/README/: index.html
crates/goose/: Cargo.toml
crates/goose-agent-core/: Cargo.toml  README.md
crates/goose-agent-core/src/: lib.rs
crates/goose-agent-loop/: Cargo.toml  README.md
crates/goose-agent-loop/src/: control.rs  events.rs  lib.rs  options.rs  runtime.rs  tests.rs
crates/goose-provider-runtime/: Cargo.toml  README.md
crates/goose-provider-runtime/src/: config.rs  errors.rs  failure.rs  lib.rs  retry.rs  runtime.rs  tests.rs  usage.rs
crates/goose-providers/: Cargo.toml
crates/goose-providers/src/: lib.rs  model_config.rs
crates/goose-runtime-policy/: Cargo.toml  README.md
crates/goose-runtime-policy/src/: assembly.rs  lib.rs  policy.rs  target.rs  tests.rs
crates/goose-session-runtime/: Cargo.toml  README.md
crates/goose-session-runtime/src/: history.rs  lib.rs  tests.rs  traits.rs  types.rs
crates/goose-tool-runtime/: Cargo.toml  README.md
crates/goose-tool-runtime/src/: arguments.rs  dispatch.rs  errors.rs  lib.rs  policy.rs  tests.rs  types.rs
crates/goose/src/: lib.rs  model.rs
deeplink-generator/: index.html
docs/category/architecture-overview/: index.html
docs/category/getting-started/: index.html
docs/category/guides/: index.html
docs/category/mcp-servers/: index.html
docs/category/tutorials/: index.html
docs/experimental/: index.html
docs/experimental/goose-mobile/: index.html
docs/experimental/mobile-access/: index.html
docs/experimental/ollama/: index.html
docs/experimental/remote-access/: index.html
docs/experimental/vs-code-extension/: index.html
docs/getting-started/installation/: index.html
docs/getting-started/providers/: index.html
docs/getting-started/using-extensions/: index.html
docs/goose-architecture/: index.html
docs/goose-architecture/error-handling/: index.html
docs/goose-architecture/extensions-design/: index.html
docs/guides/acp-clients/: index.html
docs/guides/acp-providers/: index.html
docs/guides/allowlist/: index.html
docs/guides/cli-providers/: index.html
docs/guides/codebase-analysis/: index.html
docs/quickstart/: index.html
docs/troubleshooting/: index.html
extension/: index.html
extensions/: index.html
extensions/detail/: index.html
grants/: index.html
markdown-page/: index.html
pr-preview/pr-8157/: 404.html  index.html  sitemap.xml  skills-manifest.json
pr-preview/pr-8158/: 404.html  index.html  sitemap.xml  skills-manifest.json
prompt-library/: index.html
prompt-library/detail/: index.html
prompt-library/types/: index.html
recipe-generator/: index.html
recipes/: index.html
recipes/detail/: index.html
recipes/types/: index.html
skills/: index.html
skills/detail/: index.html
skills/types/: index.html
(+1889 files in other folders)
