[package]
name = "goose-provider-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Reusable provider runtime contracts for goose"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
goose-providers = { version = "1.37.0", path = "../goose-providers" }
rand = { workspace = true, features = ["std_rng"] }
reqwest.workspace = true
rmcp.workspace = true
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
