[package]
name = "goose-tool-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Reusable tool and workspace runtime contracts for goose"

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
goose-session-runtime = { version = "1.37.0", path = "../goose-session-runtime" }
serde = { workspace = true }
serde_json.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }

